Invalidate the right things when a stack's kids resize, or if they move _and_ margins change.  Bug 331880, r+sr+branch181=roc